--- a/serverless.yml
+++ b/serverless.yml
@@ -35,7 +35,7 @@ functions:
     handler: handler.getWord
     events:
         - http:
-            path: getWord/{word}
+            path: getWord
             method: get
             cors:
             origins:
