--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
-    "async": "^2.6.1"
+    "async": "^2.6.1",
+    "express": "^4.16.3",
+    "filenamify": "^2.1.0"
   }
 }
